--- a/index.html
+++ b/index.html
@@ -36,35 +36,24 @@
 		}
 	</style>
 </head>
-<body id="body" onLoad="loadCookies();">
-
-<div data-role="page" id="region">
-	<div data-role="header" data-position="fixed">
-		<a href="#test" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
-		<h1>Resource Finder</h1>
-	</div>
-	<div data-role="content" class="content" class="ui-field-contain">
-	<p> Choose the type of resource needed in the area desired or choose to see all resources.</p>
-	</div>
-</div>
+<body>
 
 <div data-role="page" id="filter">
 	<div data-role="header" data-position="fixed">
-		<h1>Adult Resource Finder</h1>
-		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"</>
-		<a href="#region" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-gear" data-transition="slideup">
+		<h1>Juvenile Resource Finder</h1>
+		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 	</div>
 	<div data-role="content" class="content">
-		<div class="ui-field-contain">Use the following selections to find social, community based programs & services.
+		<div class="ui-field-contain">Use the following selections to find juvenile social, community based programs & services in and around Boston.
 			<select id="town" name="select-native-1" id="select-native-1" style="width:100%" onChange="list_page();">
-				<option value="0">Choose a Location</option>
-					<option id="loading_selection" value="0">Loading Locations...</option>
-					<option v-for="item in items" v-bind:value="item['fields']['Latitude, Longitude, Zoom']">{{ item['fields']['Name'] }}</option>
+        		<option value="0">Choose a Location</option>
+						<option id="loading_selection" value="0">Loading Locations...</option>
+						<option v-for="item in items" v-bind:value="item['fields']['Latitude, Longitude, Zoom']">{{ item['fields']['Name'] }}</option>
     		</select>
 		</div>
 
-		<p> Enter age of the client seeking services. Leave age blank to view all services.</p>
-		<input name="age" id="age" data-type="number" placeholder="Input Age" onClick="saveCookies" onChange="list_page();">
+		<p> Enter age of the juvenile seeking services. Leave age blank to view all services.</p>
+		<input name="age" id="age" data-type="number" placeholder="Input Age" onChange="list_page();">
 
 		<fieldset id="categories" data-role="controlgroup">
 			<p style="margin-top:15px;">Check the type(s) of service(s) you are looking for:</p>
@@ -87,7 +76,6 @@
 <div data-role="page" id="about">
 	<div data-role="header" data-position="fixed">
 		<h1>About</h1>
-		<a href="#test" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 		<a href="#" data-rel="back" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l ui-btn-icon-notext"></a>
 	</div>
 	<div data-role="content" class="content">
@@ -99,6 +87,21 @@
 
 	</div>
 </div>
+
+
+
+<div data-role="page" id="details">
+	<div data-role="header" data-position="fixed">
+		<h1>Details</h1>
+		<a href="#" data-rel="back" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l ui-btn-icon-notext"></a>
+	</div>
+	<div data-role="content" class="content">
+		<div id="detail" v-for="" v-if="">
+		</div>
+	</div>
+</div>
+
+
 
 <div data-role="page" id="results">
 	<div data-role="header" data-position="fixed">
@@ -148,45 +151,13 @@
 
 <script type="text/javascript">
 
-	var app_id = "app7wMIC4y73E1Mfq";
+	var app_id = "appHUknSmoIogemD5";
 	var app_key = "keyHtA4JdvolTnmFV";
-	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunities/Training"],["Health","Health Services"],["Academic","Academic Support"],["Case","Case Management"],["Mentor","Mentoring"],["Shelter","Shelter"]];
+	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunities/Training"],["Health","Health Services"],["Risk","High Risk"],["Multi","Multi-Service"]];
 
 	var categories = "";
 	var ages = "";
 	var work = 0;
-
-	function createCookie(name,value,days) {
-        if (days) {
-            var date = new Date();
-            date.setTime(date.getTime()+(days*24*60*60*1000));
-            var expires = "; expires="+date.toGMTString();
-        }
-        else var expires = "";
-        document.cookie = name+"="+value+expires+"; path=/";
-    }
-
-    function readCookie(name) {
-        var nameEQ = name + "=";
-        var ca = document.cookie.split(';');
-        for(var i=0;i < ca.length;i++) {
-            var c = ca[i];
-            while (c.charAt(0)==' ') c = c.substring(1,c.length);
-            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-        }
-        return null;
-    }
-
-    function loadCookies() {
-        if (readCookie("age")) {
-            $("#age").val(readCookie("age"));
-        }
-    }
-
-    function saveCookies() {
-        key = $("#age").val().trim();
-        createCookie("age",age,365*100);
-    }
 
 	function load_first() {
 			cat_names.forEach((cat, index) => {
@@ -207,16 +178,10 @@
 		} else if (mode == 1) {
 			apicall = "https://api.airtable.com/v0/"+app_id+"/Categories/?sort[0][field]=Name&sort[0][direction]=asc";
 		} else if (mode == 2) {
-			//apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=AND("+ages+"OR("+categories+"))&sort[0][field]=Name&sort[0][direction]=asc";
-			apicall = "https://api.airtable.com/v0/"+app_id+"/Resources/?filterByFormula=AND("+(lat-1)+"<={Latitude},"+(lat+1)+">={Latitude},"+(lon-1)+"<={Longitude},"+(lon+1)+">={Longitude},"+ages+"OR("+categories+"))&sort[0][field]=Name&sort[0][direction]=asc";
-			console.log(apicall)
+			apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=AND("+ages+"OR("+categories+"))&sort[0][field]=Name&sort[0][direction]=asc";
 		} else if (mode == 3) {
-			//apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=(RECORD_ID()=\""+id+"\")";
-			apicall = "https://api.airtable.com/v0/"+app_id+"/Resources/?filterByFormula=(RECORD_ID()=\""+id+"\")";
+			apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=(RECORD_ID()=\""+id+"\")";
 		}
-
-
-	var column_names =
 
 		var app = new Vue({
               el: target,
@@ -255,7 +220,7 @@
 			alert('You must choose a location.');
 		} else if ( isNaN(Number($('#age').val())) ) {
 			alert('You must enter a numeric age (in years) or leave blank.')
-		} else if ($('#checkbox-v-Outreach').is(":checked") || $('#checkbox-v-Counseling').is(":checked") || $('#checkbox-v-Training').is(":checked") || $('#checkbox-v-Health').is(":checked") || $('#checkbox-v-Academic').is(":checked")|| $('#checkbox-v-Case').is(":checked")|| $('#checkbox-v-Mentor').is(":checked")|| $('#checkbox-v-Shelter').is(":checked")) {
+		} else if ($('#checkbox-v-Outreach').is(":checked") || $('#checkbox-v-Counseling').is(":checked") || $('#checkbox-v-Risk').is(":checked") || $('#checkbox-v-Training').is(":checked") || $('#checkbox-v-Health').is(":checked") || $('#checkbox-v-Multi').is(":checked")) {
 			next_page_1()
     } else {
 			alert('You must choose at least one type of service.')
@@ -291,14 +256,11 @@
 				cat_names.forEach((cat, index) => {
 					if ($('#checkbox-v-'+cat[0]).is(":checked")){
 						$("#org_list").html( $("#org_list").html() + "<li data-role=\"list-divider\">"+cat[1]+"</li>")
-						//$("#org_list").html( $("#org_list").html() + "<li v-for=\"item in items\" v-if=\"item['fields']['Category'] == '"+cat[1]+"'\"><a href=\"javascript:void('')\" v-bind:id=\"item['id']\" onClick=\"details_page(this.id);\">{{ item['fields']['Name'] }}<p>Ages: {{ item['fields']['Minimum Age'] }}-{{ item['fields']['Maximum Age'] }}; Gender(s): {{ item['fields']['Gender'] }}</p></a></li>")
-						$("#org_list").html( $("#org_list").html() + "<li v-for=\"item in items\" v-if=\"item['fields']['"+cat[1]+"']==1\"><a href=\"javascript:void('')\" v-bind:id=\"item['id']\" onClick=\"details_page(this.id);\">{{ item['fields']['Name'] }}<p>Ages: {{ item['fields']['Minimum Age'] }}-{{ item['fields']['Maximum Age'] }}; Gender(s): {{ item['fields']['Gender'] }}</p></a></li>")
+						$("#org_list").html( $("#org_list").html() + "<li v-for=\"item in items\" v-if=\"item['fields']['Category'] == '"+cat[1]+"'\"><a href=\"javascript:void('')\" v-bind:id=\"item['id']\" onClick=\"details_page(this.id);\">{{ item['fields']['Name'] }}<p>Ages: {{ item['fields']['Minimum Age'] }}-{{ item['fields']['Maximum Age'] }}; Gender(s): {{ item['fields']['Gender'] }}</p></a></li>")
 						if (categories != "") {
 							categories = categories+",";
 						}
-						categories = categories+"(1={"+cat[1]+"})";
-						console.log(categories)
-						//categories = ""
+						categories = categories+"FIND(\""+cat[1]+"\",{Category})";
 					}
 				});
 
@@ -310,6 +272,7 @@
 
 				$('#town_name').html($('#town').find(":selected").text());
 
+		    load_api_data('#results',2);
 
 				geo_data = $('#town').find(":selected").val().split(',').map(Number);
 				//console.log(geo_data)
@@ -317,8 +280,6 @@
 				lat = geo_data[0];
 				lon = geo_data[1];
 				zoomin = geo_data[2];
-
-			    load_api_data('#results',2);
 
 	  	} else {
 				return false;
@@ -331,8 +292,8 @@
       	$("#detail").attr("v-for", "item in items");
       	//$("#detail").attr("v-if", "item['id'] == '"+id+"'");
       	$("#detail").html("");
-      	$("#detail").html($("#detail").html() + "<h3>{{ item['fields']['Name'] }}</h3>");
-      	$("#detail").html($("#detail").html() + "<h4>Categories: <span if-v = 1 {{ item['fields'] ['Outreach'] }} </span></h4>");
+      	$("#detail").html($("#detail").html() + "<h3>{{ item['fields']['Name'] }}</h3>")
+      	$("#detail").html($("#detail").html() + "<h4>{{ item['fields']['Category'] }}</h4>");
       	$("#detail").html($("#detail").html() + "<p><b>Ages:</b> {{ item['fields']['Minimum Age'] }}-{{ item['fields']['Maximum Age'] }} &nbsp;&nbsp; <b>Gender(s):</b> {{ item['fields']['Gender'] }}</p>");
 		$("#detail").html($("#detail").html() + "<p><b>Phone:</b> <a v-bind:href=\"'tel:'+item['fields']['Phone']\" target=\"_blank\">{{ item['fields']['Phone'] }}</p>");
 		$("#detail").html($("#detail").html() + "<p><b>Email:</b> <a v-bind:href=\"'mailto:'+item['fields']['Email']\" target=\"_blank\">{{ item['fields']['Email'] }}</a></p>");
